[Media Router] Do not issue a tab mirroring sinks query if tab is not valid.

It is possible to bring up the MR UI outside the context of a valid tab.
In those cases we should omit TAB_MIRROR is one of the cast modes and
not start a sinks query for the tab mirror MediaSource.

BUG=591855

Review URL: https://codereview.chromium.org/1761793005

Cr-Commit-Position: refs/heads/master@{#379872}

Former-commit-id: 236fddad6b5bcd9d00ead4c19d18e6fbd459d143